--- a/src/main/transformations/dev_sb_asia_dev7/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev7/token.properties
@@ -1,4 +1,4 @@
- WORKFLOW_INTEGRATION_USER=sudhirkumar.acharya.ntt@asia.daimler-apac.com.asiadev7
+ WORKFLOW_INTEGRATION_USER=vineet.srivastava.ntt@mbj.daimler-apac.com.asiadev7
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012p00000004ISQ
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012p00000004IST
@@ -76,5 +76,5 @@ OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000008UJy
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-dev.mercedes-benz.com/webservices/CampaignUpdateNotification
 
-SETTING_DEFAULT_CASE_OWNER=sudhirkumar.acharya.ntt@asia.daimler-apac.com.asiadev7
-SETTING_DEFAULT_CASE_USER=sudhirkumar.acharya.ntt@asia.daimler-apac.com.asiadev7
+SETTING_DEFAULT_CASE_OWNER=vineet.srivastava.ntt@mbj.daimler-apac.com.asiadev7
+SETTING_DEFAULT_CASE_USER=vineet.srivastava.ntt@mbj.daimler-apac.com.asiadev7
