--- a/src/main/transformations/dev_sb_asia_dev6/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev6/token.properties
@@ -48,17 +48,19 @@ CASE_INQUIRY_TYPE_RECORDTYPEID=012p000000008je
 VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
-OBJECT_LEAD_ID=01Ip00000000CJm
-OBJECT_LEAD_SALES_RECORD_TYPE_ID=012p000000008iS
-OBJECT_LEAD_FIRSTNAME_ID=00Np0000000Gznx
-OBJECT_LEAD_LASTNAME_ID=00Np0000000GzoY
-OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00Np0000000Gznw
-OBJECT_LEAD_NATIVE_LASTNAME_ID=00Np0000000GzoX
-OBJECT_LEAD_ADDRESS_ID=00Np0000000Gzo1
-OBJECT_LEAD_PHONE_ID=00Np0000000GzpJ
-OBJECT_LEAD_FAX_ID=00Np0000000Gzno
-OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
-OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
+OBJECT_LEAD_ID=/a13/e
+OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
+OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
+OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
+OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00N2800000A9Ck8
+OBJECT_LEAD_NATIVE_LASTNAME_ID=00N2800000A9Ckj
+OBJECT_LEAD_ADDRESS_ID=00N2800000A9CkD
+OBJECT_LEAD_PHONE_ID=00N2800000A9ClV
+OBJECT_LEAD_FAX_ID=00N2800000A9Ck0
+OBJECT_LEAD_CONTACT_ID=CF00N2800000A9CjS
+OBJECT_LEAD_CONTACT_LKID=CF00N2800000A9CjS_lkid
+OBJECT_LEAD_COMPANY_ACCOUNT_ID=CF00N2800000A9CjO
+OBJECT_LEAD_COMPANY_ACCOUNT_LKID=CF00N2800000A9CjO_lkid
 
 
 OBJECT_CASE_ID=/500/o
