--- a/src/main/destructive/destructive.properties
+++ b/src/main/destructive/destructive.properties
@@ -485,3 +485,4 @@ post:Profile:'CAC IB TL':AAABVnl+H2k=
 post:Profile:'Central S&M Marketing Manager':AAABVnl+H1l=
 post:Profile:'CAC Data Manager':AAABVnl+K1k=
 post:Profile:'Premier Support User':AAABVnl+K1m=
+post:CustomField:Vehicle_Relationship__c.Used_Warranty_Apply_Status__c:AAABVtswVng=
