--- a/src/main/transformations/dev_sb_asia_dev5/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev5/token.properties
@@ -59,6 +59,11 @@ OBJECT_LEAD_PHONE_ID=00Np0000000GzpJ
 OBJECT_LEAD_FAX_ID=00Np0000000Gzno
 OBJECT_LEAD_ACCOUNT_ID=CF00NO0000001wS4x
 OBJECT_LEAD_ACCOUNT_LKID=CF00NO0000001wS4x_lkid
+OBJECT_LEAD_CONTACT_ID=CF00N2800000A9CjS
+OBJECT_LEAD_CONTACT_LKID=CF00N2800000A9CjS_lkid
+OBJECT_LEAD_COMPANY_ACCOUNT_ID=CF00N2800000A9CjO
+OBJECT_LEAD_COMPANY_ACCOUNT_LKID=CF00N2800000A9CjO_lkid
+
 
 
 OBJECT_CASE_ID=/500/o
