--- a/src/main/transformations/dev_sb_asia_cikorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_cikorea/token.properties
@@ -6,6 +6,33 @@ OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012p00000004ISS
 
 CENTRAL_OFFICE_QUEUE_ID=00Gp0000000Mbrv
 
+OBJECT_LEAD_ID=/a13/o
+OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
+OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
+OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
+OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00N2800000A9Ck8
+OBJECT_LEAD_NATIVE_LASTNAME_ID=00N2800000A9Ckj
+OBJECT_LEAD_ADDRESS_ID=00N2800000A9CkD
+OBJECT_LEAD_PHONE_ID=00N2800000A9ClV
+OBJECT_LEAD_FAX_ID=00N2800000A9Ck0
+OBJECT_LEAD_CONTACT_ID=CF00N2800000A9CjS
+OBJECT_LEAD_CONTACT_LKID=CF00N2800000A9CjS_lkid
+OBJECT_LEAD_COMPANY_ACCOUNT_ID=CF00N2800000A9CjO
+OBJECT_LEAD_COMPANY_ACCOUNT_LKID=CF00N2800000A9CjO_lkid
+
+OBJECT_CASE_ID=/500/e
+OBJECT_CASE_VEHICLE_RELATIONSHIP=CF00Np0000000ODbU
+OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=CF00Np0000000ODbU_lkid
+OBJECT_CASE_Vehicle_ID=00Np0000000ODbQ
+OBJECT_CASE_INQUIRY_RECORDTYPEID=012p00000004ISt
+
+OBJECT_LEAD_CASE=CF00Np0000000ODOJ
+OBJECT_lEAD_CASE_LKID=CF00Np0000000ODOJ_lkid
+OBJECT_LEAD_ACCOUNT=CF00Np0000000ODOS
+OBJECT_LEAD_ACCOUNT_LKID=CF00Np0000000ODOS_lkid
+OBJECT_LEAD_OBJECTID=01Ip00000008XuX
+OBJECT_LEAD_TAB_ID=/a0t/e
+
 OBJECT_CAMPAIGN_LEAD_WEBLINK_OBJECT_KEYPREFIX=a0r
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_ID=00Np0000000ODMl
 OBJECT_CAMPAIGN_LEAD_WEBLINK_LEAD_FIELD_LKID=00Np0000000ODMl_lkid
@@ -44,8 +71,13 @@ INTEREST_VEHICLE_CLASS_FIELD_ID_IN_LEAD=00Np0000000ODPN
 INTEREST_VEHICLE_MODEL_FIELD_ID_IN_LEAD=00Np0000000ODPQ
 CONTACT_FIELD_ID_IN_LEAD=00Np0000000ODOS
 CASE_FIELD_ID_IN_LEAD=00Np0000000ODOJ
+CASE_INQUIRY_TYPE_RECORDTYPEID=012p00000004ISt
 VEHICLE_FIELD_ID_IN_CASE=00Np0000000ODbX
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
+
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.cikorea
 SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.cikorea
+
