--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -1,8 +1,36 @@
-WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
+WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@asia.daimler-apac.com.test
+
+OBJECT_LEAD_ID=/a0t/e
+OBJECT_LEAD_SALES_RECORD_TYPE_ID=012N0000000957x
+OBJECT_LEAD_FIRSTNAME_ID=00NN0000001NLCq
+OBJECT_LEAD_LASTNAME_ID=00NN0000001NLDR
+OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00NN0000001NLCp
+OBJECT_LEAD_NATIVE_LASTNAME_ID=00NN0000001NLDQ
+OBJECT_LEAD_ADDRESS_ID=00NN0000001NLCu
+OBJECT_LEAD_PHONE_ID=00NN0000001NLEC
+OBJECT_LEAD_FAX_ID=00NN0000001NLCh
+OBJECT_LEAD_CONTACT_ID=CF00NN0000001NLC9
+OBJECT_LEAD_CONTACT_LKID=CF00NN0000001NLC9_lkid
+OBJECT_LEAD_COMPANY_ACCOUNT_ID=CF00NN0000001NLC5
+OBJECT_LEAD_COMPANY_ACCOUNT_LKID=CF00NN0000001NLC5_lkid
+
+OBJECT_CASE_ID=/500/e
+OBJECT_CASE_VEHICLE_RELATIONSHIP=00NN0000001NLPD
+OBJECT_CASE_VEHICLE_RELATIONSHIP_LKIED=00NN0000001NLPD_lkid
+OBJECT_CASE_Vehicle_ID=00NN0000001NLP9
+OBJECT_CASE_INQUIRY_RECORDTYPEID=012N0000000958A
+
+OBJECT_LEAD_CASE=CF00NN0000001NLC0
+OBJECT_lEAD_CASE_LKID=CF00NN0000001NLC0_lkid
+OBJECT_LEAD_ACCOUNT=CF00NN0000001NLC9
+OBJECT_LEAD_ACCOUNT_LKID=CF00NN0000001NLC9_lkid
+OBJECT_LEAD_OBJECTID=01IN00000005ODE
+OBJECT_LEAD_TAB_ID=/a0t/e
 
 OBJECT_CAMPAIGN_WEBLINK_CAC_CAMPAIGN_RECORD_TYPE_ID=012N0000000957m
 OBJECT_CAMPAIGN_WEBLINK_COMPLEX_EXECUTION_RECORD_TYPE_ID=012N0000000957p
 OBJECT_CAMPAIGN_WEBLINK_SIMPLE_EXECUTION_RECORD_TYPE_ID=012N0000000957o
+
 
 CENTRAL_OFFICE_QUEUE_ID=00GN0000001KCcq
 
@@ -44,8 +72,12 @@ INTEREST_VEHICLE_CLASS_FIELD_ID_IN_LEAD=00NN0000001NLD4
 INTEREST_VEHICLE_MODEL_FIELD_ID_IN_LEAD=00NN0000001NLD7
 CONTACT_FIELD_ID_IN_LEAD=00NN0000001NLC9
 CASE_FIELD_ID_IN_LEAD=00NN0000001NLC0
+CASE_INQUIRY_TYPE_RECORDTYPEID=012N0000000958A
 VEHICLE_FIELD_ID_IN_CASE=00NN0000001NLPG
 VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00NN0000001NLPD
 
-SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
-SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
+WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
+
+SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.test
+SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.test
