--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -1,4 +1,4 @@
-WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@asia.daimler-apac.com.test
+WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
 
 OBJECT_LEAD_ID=/a0t/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012N0000000957x
@@ -79,5 +79,5 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00NN0000001NLPD
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.com/webservices/SuspectedDuplicateNotification
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
-SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@asia.daimler-apac.com.test
-SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@asia.daimler-apac.com.test
+SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
+SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.test
