--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -80,4 +80,4 @@ WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL=https://crm-salesforce-dev.mercedes-benz.c
 WORKFLOW_OUTBOUND_MESSAGE_ENDPOINTURL_SEND_CAMPAIGN_ID_EP=https://crm-salesforce-int.mercedes-benz.com/webservices/CampaignUpdateNotification
 
 SETTING_DEFAULT_CASE_OWNER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
-SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.test
+SETTING_DEFAULT_CASE_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
