--- a/src/main/transformations/dev_sb_asia_TestKorea/token.properties
+++ b/src/main/transformations/dev_sb_asia_TestKorea/token.properties
@@ -1,5 +1,8 @@
 WORKFLOW_INTEGRATION_USER=arun.iyer.ntt@mbj.daimler-apac.com.testkorea
 
+OBJECT_ACCOUNT_COMPANY_RECORTYPE_ID=012280000000f0p
+OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
+
 OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012N0000000957x
 OBJECT_LEAD_FIRSTNAME_ID=00NN0000001NLCq
