--- a/src/main/transformations/dev_sb_asia_dev4/token.properties
+++ b/src/main/transformations/dev_sb_asia_dev4/token.properties
@@ -1,5 +1,7 @@
 WORKFLOW_INTEGRATION_USER=rakeshbabugoud.balagani@nttdata.com.asiadev4
 
+OBJECT_ACCOUNT_COMPANY_RECORTYPE_ID=012280000000f0p
+OBJECT_ACCOUNT_PERSON_ACCOUNT_RECORTYPE_ID=012280000000f14
 
 OBJECT_LEAD_FIRSTNAME_ID=00NO0000001wS5e
 OBJECT_LEAD_LASTNAME_ID=00NO0000001wS6F
@@ -75,6 +77,7 @@ VEHICLE_RELATIONSHIP_FIELD_ID_IN_CASE=00Np0000000ODbU
 
 OBJECT_LEAD_ID=/a13/e
 OBJECT_LEAD_SALES_RECORD_TYPE_ID=012280000006I7s
+OBJECT_LEAD_AFTERSALES_RECORD_TYPE_ID=012280000006I7q
 OBJECT_LEAD_FIRSTNAME_ID=00N2800000A9Ck9
 OBJECT_LEAD_LASTNAME_ID=00N2800000A9Ckk
 OBJECT_LEAD_NATIVE_FIRSTNAME_ID=00N2800000A9Ck8
